--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.19.1",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "classnames": "^2.2.6",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
